# NewGallery2

./: Android.mk  README.md  build.gradle  build_release.sh  makeAndtest.py  platform.keystore  platform.mk  proguard.flags  settings.gradle  version.properties
Release_Notes/: 2019.xlsx  2020.xlsx
app/: build.gradle
app_discover/: build.gradle
app_gms/: build.gradle
app_go/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
libraries/: Android.mkxx
module_bokeh/: Android.mk  CMakeLists.txt  build.gradle
module_bokeh/blur/: CMakeLists.txt
module_bokeh/blur/jni/: Bokeh2Frames_interface.h  commonblur.h  iSmooth.h  sprdblur.cpp  twoframeblur.h
module_bokeh/bokeh/: CMakeLists.txt
module_bokeh/bokeh/jni/: Mutex.h  SGM_SPRD.h  sprdbokeh.h  sprdrealbokeh.cpp  sprdrealbokeh.h  sr_interface.h
module_bokeh/src/main/: AndroidManifest.xml
module_bokeh/src/main/java/com/sprd/blending/: Blending.java  ImageBlending.java
module_bokeh/src/main/java/com/sprd/blending/bean/: Depth.java  ExtractResult.java  Mask.java  TagPoint.java  UpdateInfo.java
module_bokeh/src/main/java/com/sprd/refocus/: BokehType.java  CommonRefocus.java  FullXMPMeta.java  GDepthData.java  RefocusData.java  RefocusUtils.java  SprdGdepthJpegData.java  XMPUtils.java
module_bokeh/src/main/java/com/sprd/refocus/blur/: CommonBlur.java  CommonBlurData.java  FaceBlurData.java  FaceBlurNewData.java  GaussBlurData.java  GaussBlurNewData.java  TwoFrameBlur.java  TwoFrameBlurData.java  TwoFrameBlurNewData.java
module_bokeh/src/main/java/com/sprd/refocus/bokeh/: SprdRealBokeh.java  SprdRealBokehData.java  SprdRealBokehJpegData.java  SprdRealBokehNormalData.java  SprdRealBokehSbsData.java
module_dehaze/: Android.mk  AndroidManifest.xml  CMakeLists.txt
module_dehaze/jni/: data_type.h  dehaze_interface.h  jni_sprd_dehaze.cpp  jni_sprd_dehaze.h
module_eglfence/: Android.mk  AndroidManifest.xml  CMakeLists.txt  build.gradle
module_eglfence/jni/: jni_egl_fence.cpp  jni_egl_fence.h
module_facedetector/: Android.mk  AndroidManifest.xml  CMakeLists.txt  build.gradle
module_facedetector/jni/: com_android_gallery3d_v2_discover_people_FaceDetector.cpp  facealignapi.h  faceverifyapi.h  sprdfdapi.h
module_filtershow/: Android.mk  AndroidManifest.xml  CMakeLists.txt
module_filtershow/jni/: bwfilter.c  contrast.c  edge.c  exposure.c  filters.h  fx.c  geometry.c  gradient.c  highlight.c  hsv.c  hue.c  kmeans.cc  kmeans.h  negative.c  redEyeMath.c  redeye.c  saturated.c  shadows.c  tinyplanet.cc  vibrance.c  wbalance.c
module_gallerycommon/: build.gradle
module_imageblendings/: Android.mk  AndroidManifest.xml  CMakeLists.txt
module_imageblendings/jni/: ImageBlending.h  fb_extraction.h  jni_sprd_imageblending.cpp  jni_sprd_imageblending.h
module_jpegstream/: Android.mk  AndroidManifest.xml  CMakeLists.txt
module_jpegstream/jni/: inputstream_wrapper.cpp  inputstream_wrapper.h  jerr_hook.cpp  jerr_hook.h  jpeg_config.h  jpeg_hook.cpp  jpeg_hook.h  jpeg_reader.cpp  jpeg_reader.h  jpeg_writer.cpp  jpeg_writer.h  jpegstream.cpp  outputstream_wrapper.h  stream_wrapper.cpp  stream_wrapper.h
module_jpegstream/jni/jpeg/: jerror.h  jinclude.h  jpeglib.h
module_smarterase/: Android.mk  AndroidManifest.xml  CMakeLists.txt
module_smarterase/jni/: InpaintLite.h  jni_sprd_smarterase.cpp  jni_sprd_smarterase.h
prebuilt/: prebuilt.mk
res/anim/: fade_in.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
res/color/: edit_crop_text_color.xml  ic_tab_text_color.xml  primary_text.xml
res/drawable/: action_bar_two_line_background.xml  action_mode_close.xml  adjust_seekbar_progress.xml  border_photo_frame_widget.xml  bottom_progress_bar.xml  btn_bac_selector.xml  btn_def_subject_selector.xml  btn_edit_selector.xml  btn_fix_bachground_selector.xml  btn_fix_subject_selector.xml  btn_help_selector.xml  btn_ok_selector.xml  btn_quit_selector.xml  btn_save_selector.xml  btn_undo_selector.xml  burst_thumbnail_bg_border.xml  burst_thumbnail_selected.xml  check_album_image.xml  check_item_image.xml  drawer_shadow.xml  dream_seekbar_thumb_material_anim.xml  dream_seekbar_thumb_pressed_to_unpressed.xml  dream_seekbar_thumb_pressed_to_unpressed_animation.xml  dream_seekbar_thumb_unpressed_to_pressed.xml  dream_seekbar_thumb_unpressed_to_pressed_animation.xml  edit_adjust_button.xml  edit_beautify_button.xml  edit_crop_button.xml  edit_erase_button.xml  edit_filter_button.xml  filtershow_button_background.xml  filtershow_color_picker_circle.xml  filtershow_menu_marker_rtl.xml  filtershow_scrubber.xml  filtershow_slider.xml  filtershow_tiled_background.xml  ic_add_album.xml  ic_add_to_album.xml  ic_arrow_right.xml  ic_back.xml  (+49 more)
res/drawable-v19/: filtershow_button_background.xml  transparent_button_background.xml
res/layout/: action_bar_text.xml  action_bar_two_line_text.xml  action_mode.xml  action_mode_v2.xml  actionbar_style.xml  activity_dul_camera_photo_edit.xml  activity_gallery_v2.xml  activity_layout_smart_erase.xml  activity_main.xml  activity_motion.xml  activity_refocus_edit.xml  activity_refocus_photo_edit.xml  activity_replace.xml  album_content.xml  album_header.xml  album_set_item.xml  albumset_item_content.xml  albumset_item_label.xml  all_videos_list.xml  appwidget_loading_item.xml  appwidget_main.xml  appwidget_no_thumbnail_item.xml  appwidget_photo_item.xml  bottom_control.xml  burst_activity_layout.xml  burst_popup_menu.xml  choose_widget_type.xml  crop_activity.xml  detail_list_item_layout.xml  detail_pop_layout.xml  details.xml  details_list.xml  dialog_editor.xml  dialog_merge.xml  dialog_new_album.xml  dialog_picker.xml  dialog_share_as_video.xml  dialog_view.xml  discover_item_layout.xml  (+93 more)
res/layout-1920x1080/: photo_frame.xml  undo_bar_layout.xml
res/layout-land/: filtershow_activity.xml  filtershow_color_border_ui.xml  filtershow_draw_ui.xml  filtershow_editor_panel.xml  filtershow_grad_ui.xml  filtershow_main_panel.xml  filtershow_saturation_controls.xml  filtershow_vignette_controls.xml  switcher_popup.xml
res/layout-port/: switcher_popup.xml
(+1071 files in other folders)
